--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
             <div class=" col-sm-12 col-md-6 col-lg-6 py-5 ">
                 <div class="img-section">
                     <div class="gallery">
-                        <img src="./images/frg.jpg" class=" img-fluid" alt="">
+                        <img src="./images/frg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                     <div class="gallery ">
-                        <img src="./images/rg.jpg" class=" img-fluid" alt="">
+                        <img src="./images/rg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
                 <div class="img-section">
                     <div class="gallery"> 
-                        <img src="./images/billionphotos1882993.jpg" class=" img-fluid" alt="">
+                        <img src="./images/billionphotos1882993.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                     <div class="gallery">
-                        <img src="./images/billionphotos1882951.jpg" class=" img-fluid" alt="">
+                        <img src="./images/billionphotos1882951.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
             </div>
