--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             </div>
         </div>
     </section>
-    <section class="container"> 
+    <section class="container groom"> 
         <div class="row align-items-center">
             <div class="col-sm-12 col-md-6 col-lg-6">
-                <img src="./images/billionphotos1079319min.png" alt="" class="img-fluid py-5">
+                <img src="./images/billionphotos1079319min.png" alt="" class="img-fluid ">
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 py-5 fs-3  ">
-                <h1 class=" text-primary border-bottom border-5 border-danger pb-2  ">BEST QUALITY</h1>
+            <div class="glow col-sm-12 col-md-6 col-lg-6 py-5 fs-4  ">
+                <h1 class=" text-primary border-bottom border-5 border-danger border-pr-5 pb-5  ">BEST QUALITY</h1>
                 <p>Company works with homeowners, contractors, realtors, and residential building managers to help maintain, upgrade, and repair properties</p>
                 <button class="btn btn-danger px-5 btn-lg ">BOOK NOW</button>
             </div>
         </div>
     </section>
-    <section class="container"> 
+    <section class="container broad"> 
         <div class="row ">
             <h2 class="fw-bold">Our Services</h2>
             <div class="col-4 col-md-4 col-lg-4 ">
