--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 <h6 class="text-white fs-3">HOUSE REPAIRS</h6>
                 <h1 class="text-white border-bottom border-5 border-white pb-2 ">SERVICES</h1>
                 <div class="row">
-                    <div class="col-4 col-md-4 col-lg-4 text-white">
+                    <div class="col-4 col-md-4 col-lg-4 text-white d-none d-lg-block ">
                         <img src="./images/paint-brush.svg" alt="" class="py-5"> <br>
                         <h4>PAINTING</h4>
                     </div>
-                    <div class="col-4 col-md-4 col-lg-4 text-white">
+                    <div class="col-4 col-md-4 col-lg-4 text-white d-none d-lg-block ">
                         <img src="./images/cleaning-bucket.svg" alt="" class="py-5"> <br>
                         <h4>CLEANING</h4>
                     </div>
-                    <div class="col-4 col-md-4 col-lg-4 text-white">
+                    <div class="col-4 col-md-4 col-lg-4 text-white d-none d-lg-block ">
                         <img src="./images/tap.svg" alt="" class="py-5"> 
                         <h4>PLUMBING</h4>
                     </div>
@@ -74,17 +74,17 @@
     <section class="container broad"> 
         <div class="row ">
             <h2 class="fw-bold">Our Services</h2>
-            <div class="col-4 col-md-4 col-lg-4 ">
+            <div class=" col-md-4 col-lg-4 ">
                 <img src="./images/painting.svg" alt="" class="py-5"> <br>
                 <h4 class="fw-bold">Painting</h4>
                 <p class="fst-italic">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
             </div>
-            <div class="col-4 col-md-4 col-lg-4 ">
+            <div class=" col-md-4 col-lg-4 ">
                 <img src="./images/electric.svg" alt="" class="py-5"> <br>
                 <h4 class="fw-bold">Electrical</h4>
                 <p class="fst-italic">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
             </div>
-            <div class="col-4 col-md-4 col-lg-4 ">
+            <div class=" col-md-4 col-lg-4 ">
                 <img src="./images/repair.svg" alt="" class="py-5"> 
                 <h4 class="fw-bold">Repairs</h4>
                 <p class="fst-italic">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
@@ -94,25 +94,25 @@
     </section>
     <section class="grand container">
         <div class="row">
-            <div class="col col-sm-12 col-md-6 col-lg-6 py-5 fs-3 ">
+            <div class="col col-sm-12 col-md-6 col-lg-6 py-5 fs-3  ">
                 <h6 class="text-light">ABOUT US</h6>
-                <H1 class="text-light ">Plumbing</H1>
-                <h1 class="text-light ">Services</h1>
+                <H1 class="text-light d-none d-lg-block">Plumbing</H1>
+                <h1 class="text-light d-none d-lg-block">Services</h1>
             </div>
             <div class=" col-sm-12 col-md-6 col-lg-6 py-5 ">
                 <div class="img-section">
                     <div class="gallery">
                         <img src="./images/frg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
-                    <div class="gallery ">
+                    <div class="gallery d-none d-lg-block  ">
                         <img src="./images/rg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
                 <div class="img-section">
-                    <div class="gallery"> 
+                    <div class="gallery "> 
                         <img src="./images/billionphotos1882993.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
-                    <div class="gallery">
+                    <div class="gallery d-none d-lg-block ">
                         <img src="./images/billionphotos1882951.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
