--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="./images/billionphotos1079319min.png" alt="" class="img-fluid ">
             </div>
             <div class="glow col-sm-12 col-md-6 col-lg-6 py-5 fs-4  ">
-                <h1 class=" text-primary border-bottom border-5 border-danger border-pr-5 pb-5  ">BEST QUALITY</h1>
+                <h1 class=" text-primary border-bottom border-5 border-danger border-pr-5 pb-5 ">BEST QUALITY</h1>
                 <p>Company works with homeowners, contractors, realtors, and residential building managers to help maintain, upgrade, and repair properties</p>
                 <button class="btn btn-danger px-5 btn-lg ">BOOK NOW</button>
             </div>
@@ -93,18 +93,18 @@
         </div>
     </section>
     <section class="grand container">
-        <div class="row">
+        <div class="price row">
             <div class="col col-sm-12 col-md-6 col-lg-6 py-5 fs-3  ">
                 <h6 class="text-light">ABOUT US</h6>
-                <H1 class="text-light d-none d-lg-block">Plumbing</H1>
-                <h1 class="text-light d-none d-lg-block">Services</h1>
+                <h1 class="text-light">Plumbing</h1>
+                <h1 class="text-light">Services</h1>
             </div>
-            <div class=" col-sm-12 col-md-6 col-lg-6 py-5 ">
+            <div class="branded col-sm-12 col-md-6 col-lg-6 py-5 ">
                 <div class="img-section">
                     <div class="gallery">
                         <img src="./images/frg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
-                    <div class="gallery d-none d-lg-block  ">
+                    <div class="gallery ">
                         <img src="./images/rg.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
@@ -112,14 +112,14 @@
                     <div class="gallery "> 
                         <img src="./images/billionphotos1882993.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
-                    <div class="gallery d-none d-lg-block ">
+                    <div class="gallery">
                         <img src="./images/billionphotos1882951.jpg" class=" rounded mx-auto d-block" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="container text-center py-5">
+    <section class="brown container text-center py-5">
         <h4 class="text-dark fs-1">Get your 'TO DO' list completed by a real <br> professional!</h4>
         <p class="fs-4 fw-lighter">
             We’re on a mission to help build long-lasting <br> brands that shape and define an entire industry <br> through thoughtful design.
